@@ -1,4 +1,10 @@
 This file lists the incompatible changes between Version 2.x and older versions
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.14 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+* Specific to the PARI library:
+===============================
+  - dirpowerssum0 now requires an extra argument f to allow a completely
+    multiplicative function (can be set to NULL, i.e. constant function = 1)
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.12 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - the member function bnf.futu and .tufu (deprecated since 2.2) have been
     removed. If needed, write your own helper function using bnf.fu and bnf.tu.
