@@ -332,6 +332,8 @@ vecpowug(long N, GEN B, long prec)
   long p, precp = 2, eB, prec0;
   forprime_t T;
   if (N == 1) return mkvec(gen_1);
+  if (typ(B) == t_INT && lgefint(B) <= 3 && signe(B) >= 0)
+    return vecpowuu(N, itou(B));
   eB = gexpo(B);
   prec0 = eB < 5? prec: prec + nbits2extraprec(eB);
   u_forprime_init(&T, 2, N);
@@ -363,16 +365,13 @@ vecpowug(long N, GEN B, long prec)
 GEN
 dirpowers(long n, GEN x, long prec)
 {
-  pari_sp av = avma;
+  pari_sp av;
   GEN v;
   if (n <= 0) return cgetg(1, t_VEC);
-  if (typ(x) == t_INT && lgefint(x) <= 3 && signe(x) >= 0)
-  {
-    ulong B = itou(x);
-    v = vecpowuu(n, B);
-    if (B <= 2) return v;
-  }
-  else v = vecpowug(n, x, prec);
+  av = avma;
+  v = vecpowug(n, x, prec);
+  if (typ(x) == t_INT && lgefint(x) <= 3 && signe(x) >= 0 && cmpiu(x, 2) <= 0)
+    return v;
   return gerepilecopy(av, v);
 }
 
@@ -395,7 +394,8 @@ smallfact(ulong n, GEN P, ulong sq, GEN V)
 }
 /* sum_{n <= N} n^s. */
 GEN
-dirpowerssum(ulong N, GEN s, long prec)
+dirpowerssumfun(ulong N, GEN s, void *E, GEN (*f)(void *, ulong, long),
+                long prec)
 {
   const ulong step = 2048;
   pari_sp av = avma, av2;
@@ -405,7 +405,19 @@ dirpowerssum(ulong N, GEN s, long prec)
   long prec0;
 
   if (!N) return gen_0;
-  if (N < 1000UL) return gerepileupto(av, RgV_sum(dirpowers(N, s, prec)));
+  if (f)
+  {
+    if (N < 49)
+    {
+      V = vecpowug(N, s, prec);
+      S = gen_1;
+      for (n = 2; n <= N; n++)
+        S = gadd(S, gmul(gel(V,n), f(E, n, prec)));
+      return gerepileupto(av, S);
+    }
+  }
+  else if (N < 1000UL)
+    return gerepileupto(av, RgV_sum(vecpowug(N, s, prec)));
   sq = usqrt(N);
   V = cgetg(sq+1, t_VEC);
   W = cgetg(sq+1, t_VEC);
@@ -413,34 +425,65 @@ dirpowerssum(ulong N, GEN s, long prec)
   prec0 = prec + EXTRAPRECWORD;
   s = gprec_w(s, prec0);
   gel(V,1) = gel(W,1) = gel(Q,1) = gen_1;
-  gel(V,2) = c2 = gexp(gmul(s, mplog2(prec0)), prec0); /* 2^s */
+  c2 = gexp(gmul(s, mplog2(prec0)), prec0); /* f(2) 2^s */
+  if (f) c2 = gmul(c2, f(E, 2, prec));
+  gel(V,2) = c2;
   gel(W,2) = gaddgs(c2, 1);
   gel(Q,2) = gaddgs(gsqr(c2), 1);
-  for (n = 3; n <= sq; n++)
+  if (f)
   {
-    GEN t;
-    if (odd(n))
+    GEN nsprec = NULL;
+    for (n = 3; n <= sq; n++)
     {
-      t = divru(utor(n, prec0), n-1); /* n / (n-1) */
-      t = gmul(gel(V,n-1), gpow(t, s, prec0)); /* = n^s */
+      GEN t;
+      if (odd(n))
+      {
+        GEN ts;
+        if (n == 3)
+          t = gpow(utoipos(3), s, prec0);
+        else
+        {
+          t = divru(utor(n, prec0), n-2); /* n / (n-2) */
+          ts = gpow(t, s, prec0);
+          t = gmul(nsprec, ts); /* = n^s */
+        }
+        nsprec = t;
+        t = gmul(t, f(E, n, prec0)); /* f(n) n^s */
+      }
+      else
+        t = gmul(c2, gel(V, n>> 1));
+      gel(V,n) = t; /* = f(n) n^s */
+      gel(W,n) = gadd(gel(W,n-1), gel(V,n));       /* = sum_{i<=n} f(i)i^s */
+      gel(Q,n) = gadd(gel(Q,n-1), gsqr(gel(V,n))); /* = sum_{i<=n} f(i^2)i^2s */
     }
-    else
-      t = gmul(c2, gel(V, n>> 1));
-    gel(V,n) = t; /* = n^s */
-    gel(W,n) = gadd(gel(W,n-1), gel(V,n));       /* = 1^s + ... + n^s */
-    gel(Q,n) = gadd(gel(Q,n-1), gsqr(gel(V,n))); /* = 1^2s + ... + n^2s */
   }
+  else
+    for (n = 3; n <= sq; n++)
+    {
+      GEN t;
+      if (odd(n))
+      {
+        t = divru(utor(n, prec0), n-1); /* n / (n-1) */
+        t = gmul(gel(V,n-1), gpow(t, s, prec0)); /* = n^s */
+      }
+      else
+        t = gmul(c2, gel(V, n>> 1));
+      gel(V,n) = t; /* = f(n) n^s */
+      gel(W,n) = gadd(gel(W,n-1), gel(V,n));       /* = 1^s + ... + n^s */
+      gel(Q,n) = gadd(gel(Q,n-1), gsqr(gel(V,n))); /* = 1^2s + ... + n^2s */
+    }
   c3 = gel(V,3); c6 = gel(V,6);
   precp = 0; ps = NULL; S = gen_0;
   u_forprime_init(&T, sq + 1, N);
   av2 = avma;
   while ((p = u_forprime_next(&T)))
   {
-    GEN t = utor(p, prec0);
+    GEN t = utor(p, prec0), u;
     if (precp) t = divru(t, precp);
     t = gpow(t, s, prec0);
-    ps = precp? gmul(ps, t): t; /* p^s */
-    S = gadd(S, gmul(gel(W, N / p), ps));
+    u = ps = precp? gmul(ps, t): t; /* p^s */
+    if (f) u = gmul(u, f(E, p, prec0));
+    S = gadd(S, gmul(gel(W, N / p), u));
     precp = p;
     if ((p & 0x1ff) == 1) S = gerepileupto(av2, S);
   }
@@ -497,9 +540,20 @@ dirpowerssum(ulong N, GEN s, long prec)
   return gerepileupto(av, S);
 }
 GEN
-dirpowerssum0(GEN N, GEN s, long prec)
+dirpowerssum(ulong N, GEN s, long prec)
+{ return dirpowerssumfun(N, s, NULL, NULL, prec); }
+static GEN
+gp_callUp(void *E, ulong x, long prec)
+{
+  long court[] = {evaltyp(t_INT)|_evallg(3), evalsigne(1)|evallgefint(3),0};
+  court[2] = x; return gp_callprec(E, court, prec);
+}
+GEN
+dirpowerssum0(GEN N, GEN s, GEN f, long prec)
 {
   if (typ(N) != t_INT) pari_err_TYPE("dirpowerssum", N);
   if (signe(N) <= 0) return gen_0;
-  return dirpowerssum(itou(N), s, prec);
+  if (!f) return dirpowerssum(itou(N), s, prec);
+  if (typ(f) != t_CLOSURE) pari_err_TYPE("dirpowerssum", f);
+  return dirpowerssumfun(itou(N), s, (void*)f, gp_callUp, prec);
 }
