@@ -11,6 +11,7 @@ dirpowerssum(-1,1)
 dirpowerssum(0,1)
 dirpowerssum(4,1)
 dirpowerssum(10^5,-1.)
+dirpowerssum(10^4,-1,n->kronecker(-23,n))
 
 \\ ERRORS
 dirpowerssum('x,1)
